style.css
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');

:root {
    --lightCyan: hsl(193, 38%, 86%);
    --neonGreen: hsl(150, 100%, 66%);
    --grayishBlue: hsl(217, 19%, 38%);
    --darkGrayishBlue: hsl(217, 19%, 24%);
    --darkBlue: hsl(218, 23%, 16%);
    --fontPrimary: 'Manrope', sans-serif;
}

html {
  font-size: 16px;
}

body { 
    background-color: var(--darkBlue);
    font-size: 1.75rem;
    font-family: var(--fontPrimary);
    min-height: 95vh;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.advice-container {
  background-color: var(--darkGrayishBlue);
  max-width: 34rem;
  border-radius: 45px;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  color:var(--lightCyan);
  padding-bottom: 50px;
}

.advice-id {
  color: var(--neonGreen);
  font-size:1rem;
  padding: 40px 0;
  text-transform: uppercase;
  letter-spacing: 6px;
}

.advice-content {
  padding:0 25px;
  text-align: center;
}

#dice {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 50px;
  height:50px;
  background-color: var(--neonGreen);
  position: absolute;
  bottom: -25px;
  border-radius: 25px;
  transition: all .25s ease-in-out;
}

#dice:hover {
  box-shadow: 0 0 1em var(--neonGreen);
  cursor: pointer;
  transition: all .25s ease-in-out;
}

#dice:hover > img {
  animation: jumping 0.45s infinite alternate;
}

#dice img {
  color:hsl(150, 100%, 66%);
  transition: jumping .25s ease-in-out;
}

@keyframes jumping {
  0% {margin-top:10px}  
  25% {margin-top:0px}  
  50% {margin-top:-5px}  
  100% {margin-top:-10px}  
 }

.quote h1:before {
  content: '';
  border-top: solid 2px hsl(150, 100%, 66%);
  width:25vw;
  margin-left:10vw;
  margin-top: 25px;
  position: absolute;
}
.quote h1:after {
  content: '';
  border-bottom: solid 2px hsl(150, 100%, 66%);
  width:25vw;
  margin-left:10vw;
  margin-top: 25px;
  position: absolute;
}

.attribution { font-size: 11px; text-align: center; position: absolute; bottom:0;color:#fff}
.attribution a { color: hsl(228, 45%, 44%); }

